Fix files sharing popover overflow issue

--- a/cssjsloader/scss/reciaStyle.scss
+++ b/cssjsloader/scss/reciaStyle.scss
@@ -1,4 +1,9 @@
 
+html{
+	/* FIX : files_sharing popover overflow : ticket I-126229 */
+	height: auto !important;
+}
+
 body {
 
 /* les suppresions d'affichage */
